// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block-text renders with Inter font family 1`] = `
<DocumentFragment>
  <div
    style="font-family: "Inter", -apple-system, BlinkMacSystemFont, Arial, sans-serif;"
  >
    Inter text
  </div>
</DocumentFragment>
`;

exports[`block-text renders with RGBA colors 1`] = `
<DocumentFragment>
  <div
    style="color: rgba(51, 51, 51, 0.502); background-color: rgba(255, 0, 0, 0.2);"
  >
    Text with transparent colors
  </div>
</DocumentFragment>
`;

exports[`block-text renders with all style properties 1`] = `
<DocumentFragment>
  <div
    style="color: rgb(17, 17, 17); background-color: rgb(240, 240, 240); font-size: 18px; font-family: "Iowan Old Style", "Palatino Linotype", "URW Palladio L", P052, serif; font-weight: 500; text-align: center; letter-spacing: 1px; line-height: 28px; padding: 12px 16px 12px 16px;"
  >
    Fully styled text block
  </div>
</DocumentFragment>
`;

exports[`block-text renders with default values 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;

exports[`block-text renders with font weight 300 (light) 1`] = `
<DocumentFragment>
  <div
    style="font-weight: 300;"
  >
    Light text
  </div>
</DocumentFragment>
`;

exports[`block-text renders with font weight 500 (medium) 1`] = `
<DocumentFragment>
  <div
    style="font-weight: 500;"
  >
    Medium text
  </div>
</DocumentFragment>
`;

exports[`block-text renders with font weight 600 (semibold) 1`] = `
<DocumentFragment>
  <div
    style="font-weight: 600;"
  >
    Semibold text
  </div>
</DocumentFragment>
`;

exports[`block-text renders with font weight 700 1`] = `
<DocumentFragment>
  <div
    style="font-weight: 700;"
  >
    Bold text
  </div>
</DocumentFragment>
`;

exports[`block-text renders with font weight bold (legacy) 1`] = `
<DocumentFragment>
  <div
    style="font-weight: 700;"
  >
    Legacy bold text
  </div>
</DocumentFragment>
`;

exports[`block-text renders with font weight normal (legacy) 1`] = `
<DocumentFragment>
  <div
    style="font-weight: 400;"
  >
    Legacy normal text
  </div>
</DocumentFragment>
`;

exports[`block-text renders with safe markdown 1`] = `
<DocumentFragment>
  <div>
    <p
      style="margin:0"
    >
      This 
      <span>
        text
      </span>
       block has the 
      <strong>
        Markdown
      </strong>
       option 
      <em>
        turned on
      </em>
      .
    </p>
    <ul>
      

      <li>
        One
      </li>
      

      <li>
        Two
      </li>
      

      <li>
        Three
      </li>
      

    </ul>
    

    <p
      style="margin:0"
    >
      Powered by 
      <a
        href="https://usewaypoint.com"
        target="_blank"
      >
        Waypoint
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`block-text renders without markdown 1`] = `
<DocumentFragment>
  <div>
    ## This is not &lt;span&gt;markdown&lt;/span&gt;
  </div>
</DocumentFragment>
`;

exports[`block-text sanitizes HTML 1`] = `
<DocumentFragment>
  <div>
    

    <img
      src="x"
    />
    


    <p
      style="margin:0"
    >
      <a
        target="_blank"
      >
        a
      </a>
      <br />
      <a
        target="_blank"
      >
        Basic
      </a>
      <br />
      <a
        target="_blank"
      >
        Local Storage
      </a>
      <br />
      <a
        target="_blank"
      >
        CaseInsensitive
      </a>
      <br />
      <a
        target="_blank"
      >
        URL
      </a>
    </p>
    <p
      style="margin:0"
    >
      <a
        target="_blank"
      >
        In Quotes
      </a>
      <br />
      [a](j a v a s c r i p t:prompt(document.cookie))
      <br />
      <a
        target="_blank"
      >
        a
      </a>
      <br />
      <a
        target="_blank"
      >
        a
      </a>
      <br />
      <img
        alt="Uh oh..."
        src="%22onerror=%22alert('XSS')"
      />
      <br />
      <img
        alt="Uh oh..."
        src="https://www.example.com/image.png%22onload=%22alert('XSS')"
      />
      <br />
      <img
        alt="Escape SRC - onload"
        src="https://www.example.com/image.png%22onload=%22alert('ImageOnLoad')"
      />
      <br />
      <img
        alt="Escape SRC - onerror"
        src="%22onerror=%22alert('ImageOnError')"
      />
    </p>
    <div>
      

      <img />
      

      <a>
        link 1
      </a>
      

      <a>
        link 2
      </a>
      

      <a>
        link 3
      </a>
      

      <a>
        link 4
      </a>
      

      <a>
        link 5
      </a>
      

      <a>
        link 6
      </a>
      

      <a>
        link 7
      </a>
      

    </div>
    

  </div>
</DocumentFragment>
`;
